--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.3.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.10.3",
-    "resend": "^6.9.2"
+    "resend": "^6.9.2",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
