--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "tsx lib/seed.ts"
+    "seed": "tsx lib/seed.ts",
+    "watch-push": "node scripts/auto-push.js"
   },
   "dependencies": {
     "@supabase/ssr": "^0.5.2",
