Add static robots.txt

--- a/.env.local.example
+++ b/.env.local.example
@@ -19,3 +19,6 @@ BUSINESS_EMAIL=info@rblc.rw
 
 # Application Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Google Analytics (GA4) - get from analytics.google.com
+NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
